# IARC-Detection

./: .gitignore  CMakeLists.txt  README.md
src/: getSample.cpp  testFaceDetection.cpp  testRobotDetection.cpp
trained_xml/robot/: HAAR.xml  HOG.xml  LBP.xml
